--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dev": "react-scripts start"
   },
   "dependencies": {
+    "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
