--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
     "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.3",
+    "tailwindcss": "^4.0.4",
     "typescript": "^4.9.5"
   },
   "scripts": {
     "dev": "react-scripts start"
   },
   "dependencies": {
+    "prop-types": "^15.8.1",
     "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1"
   },
