--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "dev": "react-scripts start"
+    "dev": "react-scripts start",
+  "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+  "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
