--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "dev": "react-scripts start",
-  "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-  "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
+    "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix"
   },
   "dependencies": {
     "prop-types": "^15.8.1",
