--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/postcss": "^4.0.3",
+    "@types/googlemaps": "^3.43.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
@@ -30,6 +31,8 @@
     "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
+    "@react-google-maps/api": "^2.20.6",
     "prop-types": "^15.8.1",
     "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1"
