--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.6",
+    "framer-motion": "^12.4.3",
     "prop-types": "^15.8.1",
     "react-icons": "^5.4.0",
     "react-scripts": "^5.0.1"
