--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.6",
     "@supabase/supabase-js": "^2.48.1",
+    "@types/leaflet": "^1.9.16",
     "framer-motion": "^12.4.3",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
