--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.48.1",
     "framer-motion": "^12.4.3",
+    "leaflet": "^1.9.4",
     "prop-types": "^15.8.1",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
