Configuration du front pour gérer l'authentification via le serveur express

--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@craco/craco": "^7.1.0",
     "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/postcss": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-config-react-app": "^7.0.1",
@@ -15,18 +17,31 @@
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.37.4",
     "firebase": "^11.3.0",
+    "glob": "^10.4.5",
+    "image-minimizer-webpack-plugin": "^4.1.3",
     "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
     "react-router-dom": "^7.1.5",
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2",
     "tailwindcss": "^4.0.4",
     "typescript": "^4.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "start:dev": "env-cmd -f .env.development craco start",
+    "start:staging": "env-cmd -f .env.staging craco start",
+    "start:prod": "env-cmd -f .env.production craco start",
+    "build": "craco build",
+    "build:dev": "env-cmd -f .env.development craco build",
+    "build:staging": "env-cmd -f .env.staging craco build",
+    "build:prod": "env-cmd -f .env.production craco build",
+    "optimize-images": "node scripts/optimizeImages.js",
+    "prebuild": "npm run optimize-images",
+    "prebuild:prod": "npm run optimize-images",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "test": "react-scripts test",
+    "test": "craco test",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix"
   },
