--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "framer-motion": "^12.4.3",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
