--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
     "@craco/craco": "^7.1.0",
     "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/postcss": "^4.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.4.20",
     "env-cmd": "^10.1.0",
     "eslint": "^8.57.1",
@@ -16,7 +14,6 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.37.4",
-    "firebase": "^11.3.0",
     "glob": "^10.4.5",
     "image-minimizer-webpack-plugin": "^4.1.3",
     "postcss": "^8.5.1",
@@ -25,8 +22,7 @@
     "react-router-dom": "^7.1.5",
     "sharp": "^0.33.5",
     "svgo": "^3.3.2",
-    "tailwindcss": "^4.0.4",
-    "typescript": "^4.9.5"
+    "tailwindcss": "^4.0.4"
   },
   "scripts": {
     "start": "craco start",
