--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "@craco/craco": "^7.1.0",
     "@stripe/stripe-js": "^5.6.0",
     "@tailwindcss/postcss": "^4.0.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "autoprefixer": "^10.4.20",
     "env-cmd": "^10.1.0",
     "eslint": "^8.57.1",
@@ -15,7 +18,9 @@
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-react": "^7.37.4",
     "glob": "^10.4.5",
+    "identity-obj-proxy": "^3.0.0",
     "image-minimizer-webpack-plugin": "^4.1.3",
+    "jest-watch-typeahead": "^2.2.2",
     "postcss": "^8.5.1",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.4.2",
@@ -37,7 +42,7 @@
     "prebuild": "npm run optimize-images",
     "prebuild:prod": "npm run optimize-images",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "test": "craco test",
+    "test": "jest",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix"
   },
@@ -45,7 +50,11 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.48.1",
     "@tiptap/core": "^2.11.5",
+    "@tiptap/extension-bubble-menu": "^2.11.5",
+    "@tiptap/extension-floating-menu": "^2.11.5",
     "@tiptap/extension-image": "^2.11.5",
+    "@tiptap/extension-link": "^2.11.5",
+    "@tiptap/extension-text-align": "^2.11.5",
     "@tiptap/html": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
