--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
-    "react-leaflet": "^5.0.0",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
